--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Ephemera
 ---
 
-<div id="home">
+<!--<div id="home">
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
@@ -11,3 +11,4 @@ title: Your New Jekyll Site
     {% endfor %}
   </ul>
 </div>
+-->
