--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@ title: Ephemera
 
 
 <div class="col-lg-8 col-md-8 col-sm-7 ">
-                <img src="/assets/img/noise-1.jpg" class="img-responsive"/>
-            </div>
+                <div id="myCarousel" class="carousel slide">
+ 
+      <!-- Carousel items -->
+      <div class="carousel-inner">
+        <div class="active item"><img src="/assets/img/slide-1.jpg" class="img-responsive"/></div>
+        <div class="item"><img src="/assets/img/slide-4.jpg" class="img-responsive"/></div>
+        <div class="item"><img src="/assets/img/slide-7.jpg" class="img-responsive"/></div>
+        <div class="item"><img src="/assets/img/slide-3.jpg" class="img-responsive"/></div>
+        <div class="item"><img src="/assets/img/slide-9.jpg" class="img-responsive"/></div>
+        <div class="item"><img src="/assets/img/slide-13.jpg" class="img-responsive"/></div>
+        <div class="item"><img src="/assets/img/slide-8.jpg" class="img-responsive"/></div>
+        <div class="item"><img src="/assets/img/slide-2.jpg" class="img-responsive"/></div>
+        <div class="item"><img src="/assets/img/slide-11.jpg" class="img-responsive"/></div>
+        <div class="item"><img src="/assets/img/slide-6.jpg" class="img-responsive"/></div>
+        <div class="item"><img src="/assets/img/slide-10.jpg" class="img-responsive"/></div>
+        <div class="item"><img src="/assets/img/slide-2.jpg" class="img-responsive"/></div>
+        <div class="item"><img src="/assets/img/slide-12.jpg" class="img-responsive"/></div>
+      </div>
+  
+  </div>
+</div>
 
 
 <div class="col-lg-4 col-md-4 col-sm-3 ">
@@ -25,7 +44,13 @@ title: Ephemera
 </div>
           
 
-
+<script type='text/javascript'>
+    $(document).ready(function() {
+         $('.carousel').carousel({
+             interval: 2000
+         })
+    });    
+</script>
         <!-- <script type="text/javascript">
 
          var video = [
