--- a/_posts/2014-09-16-sound.html
+++ b/_posts/2014-09-16-sound.html
@@ -1,6 +1,7 @@
----
-layout: video
-title:  "sound&videos"
+<hr />
+
+<p>layout: video
+title:  &ldquo;sound&amp;videos&rdquo;
 categories: text
 videos:
 - <iframe src="//player.vimeo.com/video/90461558?title=0&amp;byline=0&amp;portrait=0&amp;color=ff555d" width="480" height="269" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -8,9 +9,8 @@ videos:
 - <iframe src="//player.vimeo.com/video/90983123?title=0&amp;byline=0&amp;portrait=0&amp;color=ff555d" width="480" height="270" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 authors:
 - Noise // Ben Frost
-- Drone // Tim Hecker
-- Bass // Steve Goodman (aka Kode9)
----
+- Drone // Tim Hecker</p>
 
-Video artist Marcel Weber (MFO) has created three videos interpreting Bass, Noise and Drone, accompanied by especially composed music made Kode9, Ben Frost and Tim Hecker, from which Geza Schoen drew inspiration.
-Watch and listen below.
+<h2>- Bass // Steve Goodman (aka Kode9)</h2>
+
+<p>Video artist Marcel Weber (MFO) has created three videos interpreting Bass, Noise and Drone, accompanied by the music from which Geza Schoen drew inspiration.</p>
